Update portfolio with project cards and contact information

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="project-card">
                 <img src="./images/red-team.png" alt="Red Team Operations">
                 <div class="project-content">
-                    <a href="#">
+                    <a href="https://github.com/Sunclique/Reconnaissance-Scanning">
                         <h3>Red Team Operations</h3>
                     </a>
                     <p>Scanning and pentesting personal Labs using Kali Linux and Venurable Machines.</p>
